// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Availability /> should not render by default if state is "ok" 1`] = `
<Availability
  className=""
  showWhenAvailable={false}
  state="ok"
  text="Available"
/>
`;

exports[`<Availability /> should not render when text is empty 1`] = `
<Availability
  className=""
  showWhenAvailable={false}
  state="ok"
  text=""
/>
`;

exports[`<Availability /> should render if state is "ok" when "showWhenAvailable" is set 1`] = `
<Availability
  className=""
  showWhenAvailable={true}
  state="ok"
  text="Available"
>
  <div
    className=" css-1ixzglu"
  >
    Available
  </div>
</Availability>
`;

exports[`<Availability /> should render if state is "warning" 1`] = `
<Availability
  className=""
  showWhenAvailable={false}
  state="warning"
  text="Only 5 left"
>
  <div
    className=" css-14jedxl"
  >
    Only 5 left
  </div>
</Availability>
`;

exports[`<Availability /> should render if state is "warning" 2`] = `
<Availability
  className=""
  showWhenAvailable={false}
  state="alert"
  text="Out of stock"
>
  <div
    className=" css-qsvazi"
  >
    Out of stock
  </div>
</Availability>
`;
